tests/errors/test_10.xpp
// Missing return stmt

fn foo() i64 {

}

fn bar() bool {
    
}

fn main() void {

}